# Online_Storefront_Python

./: .gitignore  .settings.json  README.md  project_commands.ipynb  pyproject.toml  run_tests.sh
src/product/: ProductCard.py  __init__.py  _validators.py  cli.py  version.py
